Set up function to handle api calls on both frontend and backend

--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,11 @@
               type="date" 
               id="to-date-input"
             >
-            <button type="submit">Submit</button>
+            <button type="submit" id="submit-data">Submit</button>
           </div>
         </form>
       </div>
+      <div id="results"></div>
     </div>
     <script src="./app.js"></script>
   </body>
